Enable preventing a linebreak in a span

--- a/_sass/partials/_print-fitting.scss
+++ b/_sass/partials/_print-fitting.scss
@@ -44,4 +44,11 @@ $print-fitting: true !default;
     }
   }
 
+  // Prevent spans from breaking over a line
+  span, em, strong {
+    &.keep-together#{$edition-suffix} {
+      white-space: nowrap;
+    }
+  }
+
 }
